<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felip.ejerciciosqllite.MainActivity">


    <Button
        android:text="@string/buscar_alumnos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_busca"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/btn_alum"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/agregar_alumnos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_alum"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/buscar_profesores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_busca"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/btn_busca_prof"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/agregar_profesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_prof"
        android:layout_below="@+id/btn_busca_prof"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <Button
        android:text="@string/borrar_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_borrado"
        android:layout_below="@+id/btn_prof"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />


</RelativeLayout>
