<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profesores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felip.ejerciciosqllite.Profesores">

    <TextView
        android:text="@string/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginStart="37dp"
        android:layout_marginTop="44dp"
        android:id="@+id/et_nomP"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_nomP"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/ciclo_profesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:text="@string/curso_tutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/despacho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_edadP"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toEndOf="@+id/textView9"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/et_cursoTut"
        android:layout_alignEnd="@+id/et_cursoTut"
        android:layout_marginTop="21dp"
        android:id="@+id/et_despa"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_cicloP"
        android:layout_marginStart="23dp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_cursoTut"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignParentEnd="true"
        tools:ignore="LabelFor" />

    <Button
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_guarda"
        android:layout_below="@+id/et_despa"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="23dp" />

    <Button
        android:text="@string/borrar_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_borraR"
        android:layout_alignBaseline="@+id/btn_guarda"
        android:layout_alignBottom="@+id/btn_guarda"
        android:layout_alignEnd="@+id/et_edadP" />
</RelativeLayout>
